--- a/src/styles/screen.css
+++ b/src/styles/screen.css
@@ -7,6 +7,7 @@
 .mainScreen {
   height: 100vh;
   width: 100vw;
+  background-color: #ddd6;
   display: flex;
   justify-content: center;
   align-items: center;
