--- a/src/styles/counter.css
+++ b/src/styles/counter.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap');
+
 .counter {
   font-size: 120px;
-  font-family: sans-serif;
   color: #a773fa;
   padding: 0 1em;
   border-radius: 20px;
+  font-family: 'Inter', sans-serif;
   box-shadow:
   #a773fa90 0px 0px 20px,
   #a773fa50 0px 0px 60px;
