--- a/src/styles/screen.css
+++ b/src/styles/screen.css
@@ -4,13 +4,23 @@
   box-sizing: border-box;
 }
 
+.darkMode {
+  background-color: #222;
+  transition: .2s;
+}
+
+.lightMode {
+  background-color: #ddd6;
+  transition: .2s;
+}
+
 .mainScreen {
   height: 100vh;
   width: 100vw;
-  background-color: #ddd6;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 2rem;
+  transition: .2s;
 }
