cm7 - hover on Day/Night btn

--- a/src/styles/switch.css
+++ b/src/styles/switch.css
@@ -8,3 +8,8 @@
   background-color: #a773fa;
   transition: .1s linear;
 }
+
+.dayNightBtn:hover {
+  cursor: pointer;
+  filter: brightness(.9);
+}
